--- a/Soccer/res/layout/activity_new_game_options.xml
+++ b/Soccer/res/layout/activity_new_game_options.xml
@@ -23,53 +23,26 @@
         android:text="@string/main_menu_title"
         android:layout_marginTop="10dp" />
     
-    <!-- Country Options -->
     <TextView
-        android:id="@+id/optionsMenuCountry"
+        android:id="@+id/optionsMenuSubtitle"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
         android:gravity="center"
         android:textSize="18sp"
         android:textColor="@color/white"
+        android:textStyle="bold"
         android:shadowColor="@color/black_shadow"
         android:shadowDx="5"
         android:shadowDy="5"
         android:shadowRadius="3"
-        android:text="@string/options_menu_country" />
-        
-    <LinearLayout
-        android:layout_width="fill_parent"
-	    android:layout_height="wrap_content"
-	    android:layout_marginTop="5dp"
-	    android:orientation="horizontal" >
-        
-        <EditText
-            android:id="@+id/countryName"
-            android:hint="@string/country_name_label"
-			android:layout_width="0dp"
-			android:layout_weight="1"
-			android:layout_height="wrap_content"
-			android:layout_marginLeft="20dp"
-        	android:layout_marginRight="10dp" />
-        
-        <EditText
-            android:id="@+id/countryNickname"
-            android:hint="@string/country_nickname_label"
-            android:layout_width="0dp"
-			android:layout_weight="1"
-			android:layout_height="wrap_content"
-			android:layout_marginLeft="10dp"
-        	android:layout_marginRight="20dp" />
-        
-    </LinearLayout>
+        android:text="@string/main_menu_subtitle" />
     
-    <!-- National FA Options -->
+    <!-- Manager Options -->
     <TextView
-        android:id="@+id/optionsMenuAssoc"
+        android:id="@+id/optionsManagerNameLabel"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="40dp"
         android:gravity="center"
         android:textSize="18sp"
         android:textColor="@color/white"
@@ -77,11 +50,11 @@
         android:shadowDx="5"
         android:shadowDy="5"
         android:shadowRadius="3"
-        android:text="@string/options_menu_assoc" />
+        android:text="@string/options_manager_name_label" />
         
     <EditText
-        android:id="@+id/assocName"
-        android:hint="@string/assoc_name_label"
+        android:id="@+id/optionsManagerName"
+        android:hint="@string/manager_name_hint"
 		android:layout_width="fill_parent"
 		android:layout_height="wrap_content"
 		android:layout_marginTop="5dp"
@@ -94,7 +67,7 @@
         android:layout_width="210dp"
         android:layout_height="70dp"
         android:layout_gravity="center_horizontal"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="40dp"
         android:paddingLeft="55dp"
         android:paddingBottom="5dp"
         android:background="@drawable/btn_default" >
